Overflow fix
Overflow is now invisible on the mobile version (might be temporal fix)

--- a/style.css
+++ b/style.css
@@ -239,6 +239,30 @@ nav {
     font-weight: bold;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #0f1038;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, #3EB2FD, #206c9e);
+    border-radius: 10px;
+    border: 2px solid #0f1038;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(180deg, #4F58FD, #3EB2FD);
+}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #2980b9 #0f1038;
+}
+
 @media (max-width: 1400px) {
     .screw1 {
         left: -40px;
@@ -315,31 +339,13 @@ nav {
     .service-description {
         font-size: 0.8em;
     }
-}
 
-
-
-::-webkit-scrollbar {
-    -webkit-appearance: none;
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
         width: 0px;
-}
+    }
 
-::-webkit-scrollbar-track {
-    background: #0f1038;
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: linear-gradient(180deg, #3EB2FD, #206c9e);
-    border-radius: 10px;
-    border: 2px solid #0f1038;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(180deg, #4F58FD, #3EB2FD);
-}
-
-* {
-    scrollbar-width: none;
-    scrollbar-color: #2980b9 #0f1038;
+    * {
+        scrollbar-width: none;
+    }
 }
